--- a/COVID19_DATA_ANALYSIS.ipynb
+++ b/COVID19_DATA_ANALYSIS.ipynb
@@ -778,7 +778,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "e4c75a53-5a21-402f-ab8b-596ac382a8cd"
+        "outputId": "d53ba2cb-fe72-4b18-a050-e6dda82f3184"
       },
       "source": [
         "#first death in NY\n",
@@ -788,22 +788,22 @@
         "first_ny_death.head()\n",
         "# return first 5 rows of first_ny_death; returns first 5 days with deaths from Covid in New York."
       ],
-      "execution_count": 19,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "           date     state  fips  cases  deaths\n",
-              "669  2020-03-14  New York    36    610       2\n",
-              "722  2020-03-15  New York    36    732       6\n",
-              "775  2020-03-16  New York    36    950      10\n",
-              "828  2020-03-17  New York    36   1375      18\n",
-              "882  2020-03-18  New York    36   2387      32"
+              "           date     state  fips  cases  deaths  new_cases\n",
+              "669  2020-03-14  New York    36    610       2        189\n",
+              "722  2020-03-15  New York    36    732       6        122\n",
+              "775  2020-03-16  New York    36    950      10        218\n",
+              "828  2020-03-17  New York    36   1375      18        425\n",
+              "882  2020-03-18  New York    36   2387      32       1012"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a80b6fb7-dc46-4d6c-806a-4ba920d5c89b\">\n",
+              "  <div id=\"df-c4a2c635-d344-42a6-a52b-635665436597\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -828,6 +828,7 @@
               "      <th>fips</th>\n",
               "      <th>cases</th>\n",
               "      <th>deaths</th>\n",
+              "      <th>new_cases</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -838,6 +839,7 @@
               "      <td>36</td>\n",
               "      <td>610</td>\n",
               "      <td>2</td>\n",
+              "      <td>189</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>722</th>\n",
@@ -846,6 +848,7 @@
               "      <td>36</td>\n",
               "      <td>732</td>\n",
               "      <td>6</td>\n",
+              "      <td>122</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>775</th>\n",
@@ -854,6 +857,7 @@
               "      <td>36</td>\n",
               "      <td>950</td>\n",
               "      <td>10</td>\n",
+              "      <td>218</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>828</th>\n",
@@ -862,6 +866,7 @@
               "      <td>36</td>\n",
               "      <td>1375</td>\n",
               "      <td>18</td>\n",
+              "      <td>425</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>882</th>\n",
@@ -870,11 +875,12 @@
               "      <td>36</td>\n",
               "      <td>2387</td>\n",
               "      <td>32</td>\n",
+              "      <td>1012</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a80b6fb7-dc46-4d6c-806a-4ba920d5c89b')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c4a2c635-d344-42a6-a52b-635665436597')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -925,12 +931,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a80b6fb7-dc46-4d6c-806a-4ba920d5c89b button.colab-df-convert');\n",
+              "          document.querySelector('#df-c4a2c635-d344-42a6-a52b-635665436597 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a80b6fb7-dc46-4d6c-806a-4ba920d5c89b');\n",
+              "          const element = document.querySelector('#df-c4a2c635-d344-42a6-a52b-635665436597');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -953,7 +959,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 47
         }
       ]
     },
@@ -964,14 +970,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c61c759a-900e-43f8-c985-a21f9bcef997"
+        "outputId": "89567e5a-e94b-4025-9976-90a01b96ff4b"
       },
       "source": [
-        "#total number of cases\n",
         "ny_df['cases'].max()\n",
-        "# Returns highest number of cases from ny_df"
+        "# Returns max number from 'cases' column in ny_df\n"
       ],
-      "execution_count": 22,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -981,7 +986,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 49
         }
       ]
     },
@@ -1404,7 +1409,7 @@
         "ny_df.plot(kind='bar')\n",
         "\n",
         "# plot() method to create diagrams\n",
-        "# specify that you want a bar plot with 'kind' arguement"
+        "# specify that you want a bar plot with 'kind=' arguement"
       ],
       "execution_count": 35,
       "outputs": [
@@ -1489,9 +1494,9 @@
         "ny_new_cases_30 = ny_df['new_cases'][-31:-1]\n",
         "\n",
         "\n",
-        "# get COVID in NY data from last 30 days, assign each label data to respective series name"
+        "# get COVID in NY data from last 30 days, assign each series with respective label data"
       ],
-      "execution_count": 38,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -1556,7 +1561,7 @@
         "plt.xticks(rotation=90)\n",
         "plt.show()\n",
         "\n",
-        "# plot deaths from COVID in NY, from past 30 days. Cases were growing faster than deaths."
+        "# plot deaths from COVID in NY, from past 30 days. Deaths were very high, cases were increasing."
       ],
       "execution_count": null,
       "outputs": [
@@ -1610,9 +1615,9 @@
         "id": "2xVCN1IBInu0",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 488
+          "height": 894
         },
-        "outputId": "93a5e986-f459-4447-f606-f119fb438d8c"
+        "outputId": "66f2e5f0-993a-445b-a4fe-75d1026ecd10"
       },
       "source": [
         "plt.figure(figsize=(15,7))\n",
@@ -1626,11 +1631,13 @@
         "plt.legend(states)\n",
         "plt.show()\n",
         "\n",
-        "# use a for loop on df(data of US) and plot date (x-axis) and cases(y-axis) from NY, CA, FL, AZ.\n",
+        "# use a for loop on df(data of US), plot date (x-axis) and cases(y-axis) from NY, CA, FL, AZ.\n",
         "# Graph is getting data for dates after 11/01/2020\n",
-        "# Y axis seems to be scaled with ticks of 0.2 millions "
+        "# Y axis seems to be scaled with ticks of 0.2 millions \n",
+        "\n",
+        "df"
       ],
-      "execution_count": 44,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1643,6 +1650,228 @@
           "metadata": {
             "needs_background": "light"
           }
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "             date          state  fips    cases  deaths\n",
+              "0      2020-01-21     Washington    53        1       0\n",
+              "1      2020-01-22     Washington    53        1       0\n",
+              "2      2020-01-23     Washington    53        1       0\n",
+              "3      2020-01-24       Illinois    17        1       0\n",
+              "4      2020-01-24     Washington    53        1       0\n",
+              "...           ...            ...   ...      ...     ...\n",
+              "47993  2022-07-17       Virginia    51  1912217   20801\n",
+              "47994  2022-07-17     Washington    53  1705815   13479\n",
+              "47995  2022-07-17  West Virginia    54   542887    7102\n",
+              "47996  2022-07-17      Wisconsin    55  1750331   14855\n",
+              "47997  2022-07-17        Wyoming    56   167386    1845\n",
+              "\n",
+              "[47998 rows x 5 columns]"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-d2caaa33-fad2-470d-8e14-acf788cd6c4c\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>date</th>\n",
+              "      <th>state</th>\n",
+              "      <th>fips</th>\n",
+              "      <th>cases</th>\n",
+              "      <th>deaths</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2020-01-21</td>\n",
+              "      <td>Washington</td>\n",
+              "      <td>53</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2020-01-22</td>\n",
+              "      <td>Washington</td>\n",
+              "      <td>53</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2020-01-23</td>\n",
+              "      <td>Washington</td>\n",
+              "      <td>53</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2020-01-24</td>\n",
+              "      <td>Illinois</td>\n",
+              "      <td>17</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>2020-01-24</td>\n",
+              "      <td>Washington</td>\n",
+              "      <td>53</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>47993</th>\n",
+              "      <td>2022-07-17</td>\n",
+              "      <td>Virginia</td>\n",
+              "      <td>51</td>\n",
+              "      <td>1912217</td>\n",
+              "      <td>20801</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>47994</th>\n",
+              "      <td>2022-07-17</td>\n",
+              "      <td>Washington</td>\n",
+              "      <td>53</td>\n",
+              "      <td>1705815</td>\n",
+              "      <td>13479</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>47995</th>\n",
+              "      <td>2022-07-17</td>\n",
+              "      <td>West Virginia</td>\n",
+              "      <td>54</td>\n",
+              "      <td>542887</td>\n",
+              "      <td>7102</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>47996</th>\n",
+              "      <td>2022-07-17</td>\n",
+              "      <td>Wisconsin</td>\n",
+              "      <td>55</td>\n",
+              "      <td>1750331</td>\n",
+              "      <td>14855</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>47997</th>\n",
+              "      <td>2022-07-17</td>\n",
+              "      <td>Wyoming</td>\n",
+              "      <td>56</td>\n",
+              "      <td>167386</td>\n",
+              "      <td>1845</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>47998 rows × 5 columns</p>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d2caaa33-fad2-470d-8e14-acf788cd6c4c')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-d2caaa33-fad2-470d-8e14-acf788cd6c4c button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-d2caaa33-fad2-470d-8e14-acf788cd6c4c');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
         }
       ]
     },
@@ -1666,9 +1895,18 @@
         "\n",
         "\n",
         "1.   Conclusion 1\n",
-        "     --Your text here\n",
+        "     Deaths in NY for the last 30 days were close to 35k daily. While new cases\n",
+        "     were lower than deaths daily in New York, new cases were increasing\n",
+        "     steadily. The graph of New York shows an increase of COVID cases near\n",
+        "     the end of 2020 year. This could be due to gatherings associated with\n",
+        "     the Thanksgiving holiday, allowing a greater chance for transmission of\n",
+        "     COVID. \n",
         "2.   Conclusion 2\n",
-        "     --Your text here>\n",
+        "     The most populus cities (NY, CA, FL, TX) had a increasing number of cases,\n",
+        "     which had a huge increase in cases before returning to a steady growth. \n",
+        "     Arizona, which is less populous, had a spike but not as big as more\n",
+        "     populous cities. This could be due to the fact that more people allows\n",
+        "     more chances for transmission of COVID, thus more cases. \n",
         "\n"
       ]
     },
